ansible/ops-exemplos/files/hello/04-hello-gateway-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-httproute
  namespace: exemplos
  labels:
    app: hello-app
spec:
  parentRefs:
    - name: gateway-publico
      namespace: kube-system
      sectionName: web
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello-svc
          port: 80
          kind: Service
